<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:paddingLeft="4dp"
            android:layout_weight="2"
            android:paddingEnd="60dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/label_name" />
        <!-- Name field -->
        <EditText
            android:id="@+id/edit_item_name"
            style="@style/EditorFieldStyle"
            android:hint="@string/hint_item_name"
            android:inputType="textCapWords" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:paddingEnd="10dp"
            android:text="@string/label_quantity" />
        <!-- Name field -->

        <Button
            android:id="@+id/decrement"
            android:layout_width="40dp"
            android:height="40dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:onClick="decrement"
            android:text="-"/>
        <EditText
            android:id="@+id/edit_item_quantity"
            style="@style/EditorFieldStyle1"
            android:hint="@string/hint_item_quantity"
            android:ellipsize="start"
            android:gravity="center_horizontal"
            android:layout_gravity="center"
            android:inputType="number" />

        <Button
            android:id="@+id/increment"
            android:layout_width="40dp"
            android:height="40dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:onClick="increment"
            android:text="+"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:paddingEnd="69dp"
            android:text="@string/label_price" />
        <!-- Name field -->
        <EditText
            android:id="@+id/edit_item_price"
            style="@style/EditorFieldStyle"
            android:hint="@string/hint_item_price"
            android:inputType="number" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:paddingLeft="4dp">

        <EditText
            android:id="@+id/edit_item_image"
            style="@style/EditorFieldStyle"
            android:hint="image label"
            android:inputType="text"
            android:visibility="invisible"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/image_uri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/upload_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Select Image"
            android:onClick="openImageSelector"/>

        <ImageView
            android:id="@+id/image"
            android:layout_width="100dp"
            android:layout_height="100dp" />

    </LinearLayout>

    <Button
        android:id="@+id/order_more"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="submitOrder"
        android:text="Order More"
        style="@style/EditorFieldStyle"/>

</LinearLayout>